fix: adjust font size for add task container header for improved readability

--- a/style/taskDetail.css
+++ b/style/taskDetail.css
@@ -211,6 +211,10 @@ dialog.closed::backdrop {
         margin-bottom: 10px;
         padding-right: 16px;
     }
+
+    .addTaskContainer h1{
+        font-size: 47px;
+    }
 }
 
 @media(max-width:599px) {
